[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/entities/lasers/Laser.gd" type="Script" id=1]
[ext_resource path="res://sounds/laser-eol.mp3" type="AudioStream" id=2]
[ext_resource path="res://sounds/laser-hit.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/laser-fire.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/bits/Particles.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.0499679, 0.0487588, 0.25 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 0.1, 0.5 )

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
roughness = 0.4
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0.627451, 0.627451, 0.627451, 0.392157, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )
width = 512

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 0.01
flag_align_y = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
radial_accel = 0.1
scale = 1.1
scale_random = 1.0
color_ramp = SubResource( 19 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.627451, 0.627451, 0.627451, 0.392157 )

[sub_resource type="PlaneMesh" id=17]
material = SubResource( 16 )
size = Vector2( 0.06, 0.06 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.454918, 1 )
colors = PoolColorArray( 1, 1, 0, 1, 1, 0.223529, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 512

[sub_resource type="Curve" id=20]
_data = [ Vector2( 0, 0.511364 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=14]
lifetime_randomness = 0.02
emission_shape = 2
emission_box_extents = Vector3( 0.1, 0.1, 0.5 )
direction = Vector3( 0, 0, -1 )
spread = 20.0
gravity = Vector3( 0, 0, -0.03 )
initial_velocity = 0.3
scale_random = 1.0
scale_curve = SubResource( 21 )
color_ramp = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="PlaneMesh" id=15]
material = SubResource( 12 )
size = Vector2( 0.05, 0.1 )

[node name="Laser" type="Area" groups=["lasers"]]
script = ExtResource( 1 )
enemy_color = Color( 1, 0, 0, 1 )
player_color = Color( 1, 1, 1, 1 )
fire_color = Color( 1, 0.470588, 0, 1 )
ice_color = Color( 0.207843, 0.517647, 0.894118, 1 )
corrosion_color = Color( 0.180392, 0.760784, 0.494118, 1 )

[node name="FollowTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="EOLSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.0521555, -0.0502256, -0.245932, 0.104311, 0.100451, 0.491863 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="Laser" type="MeshInstance" parent="."]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 50
lifetime = 10.0
one_shot = true
speed_scale = 20.0
explosiveness = 1.0
visibility_aabb = AABB( -4, -0.5, -4, 8, 1, 8 )
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 17 )
script = ExtResource( 6 )

[node name="HitParticles" type="Particles" parent="."]
emitting = false
amount = 30
lifetime = 10.0
one_shot = true
speed_scale = 12.0
explosiveness = 1.0
randomness = 0.2
visibility_aabb = AABB( -7.47943, -0.5, -9.16166, 14.9589, 1, 18.3233 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )
script = ExtResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Laser_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="FollowTimer" to="." method="_on_FollowTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
